--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
 <body>
     <header>
+        <!--ceazione nav + logo e links-->
         <nav class="brg1">
+            <!--Creazione container generale nav-->
             <div class="container-2">
-                <div class="container-nav">
+                <div>
                     <ul class="lista">
                         <li>
                             <a href="">Donna</a>
@@ -33,39 +35,66 @@
                 </div>
                 <div>
                     <div class="container-loghi">
-                        <i  class="fa-regular fa-user"></i>
-                        <i  class="fa-sharp fa-regular fa-heart"></i>
-                        <i class="fa-sharp fa-solid fa-bag-shopping"></i>
+                        <a href=""><i class="fa-regular fa-user"></i></a>
+                        <a href=""><i class="fa-sharp fa-regular fa-heart"></i></a>
+                        <a href=""><i class="fa-sharp fa-solid fa-bag-shopping"></i></a>
 
                     </div>
                 </div>
             </div>
+            <!--fine container generale nav-->
         </nav>
         <main>
             <div class="container bordo">
                 <div class="bordo">
-                    1
+                    <img class="card" src="./img/1.webp" alt="immagine 1">
+                    <p>Levi's</p>
+                    <h5>RELAXED FIT TEE UNISEX</h5>
+                    <p class="red">14,99&euro; <del class="black">29,99&euro;</del></p>
 
                 </div>
                 <div class="bordo">
-                    2
+                    <img class="card" src="./img/2.webp" alt="immagine2">
+                    <p>Guess</p>
+                    <h5>ROSES TEE</h5>
+                    <p class="red">20,99&euro; <del class="black">29,99&euro;</del></p>
+
                 </div>
                 <div class="bordo">
-                    3
+                    <img class="card" src="./img/3.webp" alt="immagine3">
+
+                    <p>Come Zucchero Filato</p>
+                    <h5>VOGLIA DI COLORI PASTELLO</h5>
+                    <p class="red">129,99&euro; <del class="black">184,99&euro;</del></p>
+
                 </div>
+
             </div>
             <div class="container bordo">
                 <div class="bordo">
-                    1
+                    <img class="card" src="./img/4.webp" alt="immagine4">
+                    <div>
+
+                    </div>
+                    <p>Levi's</p>
+                    <h5>TEE UNISEX</h5>
+                    <p class="red">14,99&euro; <del class="black">29,99&euro;</del></p>
+
 
                 </div>
                 <div class="bordo">
-                    2
+                    <img class="card" src="./img/5.webp" alt="immagine5">
+
+                    <p>Maya Deluxe</p>
+                    <h5>STRIPE BODICE</h5>
+                    <p class="red">99,99&euro;</p>
 
                 </div>
                 <div class="bordo">
-                    3
-
+                    <img class="card" src="./img/6.webp" alt="immagine6">
+                    <p>Espirit</p>
+                    <h5>Maglione - Black</h5>
+                    <p class="red">29,99&euro</p>
                 </div>
             </div>
         </main>
